syntax = "proto3";
package corepb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message PBHeader {
  string name = 1;
  string value = 2;
  bytes data = 3;
}

enum RequestType {
  UNKNOW = 0;
  QUERY = 1;
  EXECUTE = 2;
  MESSAGE = 3;
}

message PBRequestInfo {
  uint64 ID = 1;
  string service_name = 2;
  string service_path = 3;
  RequestType type = 4;
}

message PBRequest {
  PBRequestInfo info = 1;
  bytes data  = 2;
}

message PBChannelRequest {
  PBRequest request = 1;
  repeated PBHeader header = 2;
}

message PBResponseInfo {
  uint64 RequestID = 1;
  uint64 ActionIndex = 2;
}

message PBResponse {
  PBResponseInfo info = 1;
  bytes data = 2;
  string error = 3;
}

message PBChannelResponse {
  PBResponse response = 1;
  repeated PBHeader header = 2;
}
